force-app/main/default/objects/Cotizacion__c/Cotizacion__c.object-meta.xml
<CustomObject>
    <label>Cotizacion</label>
    <nameField>
        <label>Cotizacion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cotizaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>