force-app/main/default/objects/Cotizacion__c/fields/Detalle__c.field-meta.xml
<CustomField>
    <fullName>Detalle__c</fullName>
    <label>Detalle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>