force-app/main/default/objects/Cotizacion__c/fields/Valor_cotizado__c.field-meta.xml
<CustomField>
    <fullName>Valor_cotizado__c</fullName>
    <label>Valor cotizado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>